--- a/AndroidStudio/HitungBMI/app/src/main/res/navigation/navigation.xml
+++ b/AndroidStudio/HitungBMI/app/src/main/res/navigation/navigation.xml
@@ -1,5 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/navigation">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation"
+    app:startDestination="@id/hitungFragment">
 
+    <fragment
+        android:id="@+id/hitungFragment"
+        android:name="org.d3if0088.hitungbmi.ui.HitungFragment"
+        android:label="HitungFragment"
+        tools:layout="@layout/fragment_hitung">
+        <action
+            android:id="@+id/action_hitungFragment_to_saranFragment"
+            app:destination="@id/saranFragment" />
+        <action
+            android:id="@+id/action_hitungFragment_to_saranFragment3"
+            app:destination="@id/saranFragment" />
+        <action
+            android:id="@+id/action_hitungFragment_to_aboutFragment"
+            app:destination="@id/aboutFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/saranFragment"
+        android:name="org.d3if0088.hitungbmi.ui.SaranFragment"
+        android:label="SaranFragment"
+        tools:layout="@layout/fragment_saran">
+        <argument
+            android:name="kategori"
+            app:argType="org.d3if0088.hitungbmi.data.KategoriBmi" />
+    </fragment>
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="org.d3if0088.hitungbmi.ui.AboutFragment"
+        android:label="@string/tentang_aplikasi"
+        tools:layout="@layout/fragment_about"/>
 </navigation>
